# esp32-pov-rs

./: .clippy.toml  .gitignore  .gitmodules  .nvim.lua  .pre-commit-config.yaml  Cargo.toml  LICENCE.md  LICENSE  README-esp-bridge-firmware.md  README-esp-spoke-firmware.md  README-pov-proto.md  README-pov-sender-cli.md  README-pov-sender.md  README-pov-sim.md  README.md  package-lock.json
.cargo/: config.toml
.github/workflows/: esp-firmware.yml  pov-sender-cli.yml  pov-sender.yml  pov-sim.yml  release.yaml  rust_ci.yml
crates/esp-bridge-firmware/: Cargo.toml  build.rs  partitions.csv
crates/esp-bridge-firmware/src/: ble_adv.rs  esp_now_broadcaster.rs  lib.rs  usb_serial.rs
crates/esp-spoke-firmware/: Cargo.toml  build.rs  partitions-16mb.csv  partitions-4mb.csv  partitions-8mb.csv
crates/esp-spoke-firmware/src/: lib.rs  protocol.rs
crates/esp-spoke-firmware/src/adc/: mod.rs
crates/esp-spoke-firmware/src/angle_estimator/: adc_testbench.rs  hall_effect.rs  hybrid.rs  imu.rs  mock.rs  mod.rs  pure_imu_estimator.rs
crates/esp-spoke-firmware/src/angle_estimator/hall_effect/: adc_monitor.rs  adc_testbench.rs  mod.rs
crates/esp-spoke-firmware/src/angle_estimator/imu/: adafruit_9dof.rs  bmi260.rs  mod.rs
crates/esp-spoke-firmware/src/angles/: adc_monitor.rs  adc_testbench.rs  mod.rs  spin_estimator.rs
crates/esp-spoke-firmware/src/bitmap/: in_memory_storage.rs  mod.rs  storage.rs
crates/esp-spoke-firmware/src/imu/: bmi260.rs  mod.rs
crates/esp-spoke-firmware/src/led/: mod.rs  pov_dual_strip.rs  sk9822_strip.rs  strip.rs  task_common.rs  waveshare_matrix.rs
crates/esp-spoke-firmware/src/networking/: ble.rs  download.rs  esp_now.rs  mod.rs  usb_serial.rs
crates/esp-spoke-firmware/src/pushbutton/: mod.rs
crates/esp-spoke-firmware/src/status_led/: mod.rs
crates/esp-spoke-firmware/src/storage/: config.rs  ekv_flash.rs  image_file.rs  mod.rs
crates/pov-algs/: Cargo.toml
crates/pov-algs/src/: filters.rs  images.rs  lib.rs
crates/pov-images/: Cargo.toml
crates/pov-images/src/: lib.rs
crates/pov-proto/: Cargo.toml
crates/pov-proto/src/: bridge.rs  image.rs  lib.rs  transfer.rs  video.rs
doc/: architecture.md  esp-spoke-firmware-architecture.md
pov-algs/: Cargo.toml
pov-algs/src/: lib.rs
pov-bevy/: Cargo.toml
pov-bevy/src/: estimator.rs  images.rs  main.rs  state.rs
pov-images/: Cargo.toml
pov-images/src/: lib.rs
pov-sim/: Cargo.toml
pov-sim/src/: estimator.rs  images.rs  main.rs  selections.rs  state.rs  theme.rs
src/: algorithms.rs  lib.rs  main.rs
src/bitmap/: in_memory_storage.rs  mod.rs  storage.rs
src/led/: mod.rs  sk9822_strip.rs  strip.rs
tools/pov-sender-cli/: Cargo.toml  defaults.txt
tools/pov-sender-cli/.cargo/: config.toml
tools/pov-sender-cli/src/: main.rs
tools/pov-sender-core/: Cargo.toml  README.md
tools/pov-sender-core/.cargo/: config.toml
tools/pov-sender-core/src/: actions.rs  actions_wasm.rs  encode.rs  lib.rs  serial_link.rs  serial_link_wasm.rs
tools/pov-sender-gui/: Cargo.toml  README.md  index.html  package-lock.json  package.json  wrangler.jsonc
tools/pov-sender-gui/.cargo/: config.toml
tools/pov-sender-gui/src/: main.rs  web_serial.rs
tools/pov-sim/: Cargo.toml  images.json
tools/pov-sim/.cargo/: config.toml
tools/pov-sim/src/: estimator.rs  images.rs  main.rs  state.rs  theme.rs
