[workspace]
members = ["crates/*"]
exclude = ["tools/pov-sender-cli"]
resolver = "3"

[workspace.package]
edition      = "2024"
rust-version = "1.88"
version      = "0.1.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
