[package]
name = "pov-sim"
version = "0.1.0"
edition = "2024"
description = "POV Cycling Wheel Simulator"

[dependencies]
bevy = { version = "0.18", features = ["wayland"] }
pov-algs = { path = "../pov-algs", version = "*" }
pov-images = { path = "../pov-images", version = "*" }

[features]
default = ["fps"]
fps = ["bevy/bevy_dev_tools"]
log_estimator = []

[package.metadata.bundle]
name = "pov-sim"
identifier = "io.github.cycling-pov.pov-sim"
