[package]
edition      = "2024"
name         = "esp-bridge-firmware"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "esp-bridge-firmware"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.0", features = ["defmt", "esp32s3", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32s3",
] }

defmt                  = "1.0.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32s3"] }

embedded-io = { version = "0.7.1", features = ["defmt"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
esp-alloc = { version = "0.9.0", features = ["defmt"] }
esp-backtrace = { version = "0.18.1", features = [
  "defmt",
  "esp32s3",
  "panic-handler",
] }
esp-println = { version = "0.16.1", features = ["defmt-espflash", "esp32s3"] }
# for more networking protocol support see https://crates.io/crates/edge-net
bt-hci = "0.6.0"
embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
esp-radio = { version = "0.17.0", features = [
  "ble",
  "coex",
  "defmt",
  "esp-alloc",
  "esp-now",
  "esp32s3",
  "unstable",
  "wifi",
] }
trouble-host = { version = "0.5.0", features = ["gatt"] }

pov-proto = { path = "../pov-proto", features = ["bridge", "defmt"] }

embassy-sync    = { version = "0.6", features = ["defmt"] }
embassy-futures = "0.1"
heapless        = "0.9"
postcard        = { version = "1", default-features = false, features = ["postcard-derive"] }

critical-section = "1.2.0"
static_cell      = "2.1.1"
