[package]
edition = "2024"
name = "esp-spoke-firmware"
rust-version = "1.88"
version = "0.1.0"
autobins = false
default-run = "esp-spoke-firmware"

[[bin]]
name = "esp-spoke-firmware"
path = "./src/bin/main.rs"

[[bin]]
name = "adc-test-software"
path = "./src/angles/adc_testbench.rs"

[features]
default = ["espnow", "flash-4mb"]
waveshare-matrix = []
sk9822-strip = []
heap-stats = []
ble = ["dep:bt-hci", "dep:trouble-host", "esp-radio/ble"]
espnow = ["esp-radio/esp-now", "esp-radio/wifi"]
coexistence = ["esp-radio/coex"]
usb-serial = []
flash-4mb = []
flash-16mb = []
builtin-image = ["dep:image"]

[dependencies]
esp-hal = { version = "~1.0", features = ["defmt", "esp32s3", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
    "defmt",
    "embassy",
    "esp-alloc",
    "esp-radio",
    "esp32s3",
] }

defmt = "1.0.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32s3"] }
esp-hal-smartled = { version = "0.17.0", features = ["defmt", "esp32s3"] }

bt-hci = { version = "0.6.0", optional = true }
embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-futures = "0.1.2"
embassy-sync = "0.7.2"
# embassy-sync 0.6 is needed because ekv 1.0.0 depends on it; used only in ekv_flash.rs
embassy-sync-06 = { package = "embassy-sync", version = "0.6" }
embassy-time = { version = "0.5.0", features = ["defmt"] }
embedded-io = { version = "0.7.1", features = ["defmt"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
embedded-hal-async = "1.0.0"
esp-alloc = { version = "0.9.0", features = ["defmt"] }
esp-backtrace = { version = "0.18.1", features = [
    "defmt",
    "esp32s3",
    "panic-handler",
] }
esp-println = { version = "0.16.1", features = ["defmt-espflash", "esp32s3"] }
esp-radio = { version = "0.17.0", features = [
    "defmt",
    "esp-alloc",
    "esp32s3",
    "unstable",
] }
trouble-host = { version = "0.5.0", features = [
    "gatt",
    "scan",
], optional = true }

critical-section = "1.2.0"
rgb = "0.8.52"
smart-leds-trait = "0.3.2"
static_cell = "2.1.1"
postcard = { version = "1", default-features = false }
crc32fast = { version = "1", default-features = false }
pov-proto = { path = "../pov-proto", features = [
    "bridge",
    "defmt",
    "image-decode",
] }

# Do not bump EKV without checking its change notes. A version update can make
# nonvolatile storage incompatible changes.
ekv = { version = "1.0.0", features = ["defmt", "crc"] }
esp-storage = { version = "0.8.1", features = ["esp32s3"] }
embedded-storage = "0.3"
serde = { version = "1", default-features = false, features = ["derive"] }

[profile.dev.package.esp-storage]
opt-level = 3

[build-dependencies]
image = { version = "0.25.6", default-features = false, features = [
    "png",
], optional = true }
