[package]
name = "pov-sender-core"
version = "0.1.0"
edition = "2024"

[dependencies]
pov-proto = { path = "../../crates/pov-proto", features = [
    "image-encode",
    "bridge",
] }
anyhow = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
serialport = "4"
pov-images = { path = "../../crates/pov-images" }
pov-algs = { path = "../../crates/pov-algs" }
postcard = { version = "1", features = ["use-std"] }
image = "0.25"
rand = "0.10.1"
