[package]
name = "pov-sender-core"
version = "0.1.0"
edition = "2024"

[dependencies]
pov-proto = { path = "../../crates/pov-proto", features = [
    "image-encode",
    "bridge",
] }
anyhow = "1"
image = { version = "0.25", default-features = false, features = [
    "gif",
    "png",
    "jpeg",
    "bmp",
] }
pov-images = { path = "../../crates/pov-images" }
postcard = { version = "1", features = ["use-std"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
serialport = "4"
rand = "0.10.1"
